# DepthPrior

./: README.md
datasets/: extract_resolution.py  generate_indices.py  generate_predict_subset.py  generate_subset.py
datasets/KITTI/: kitti_depth_tfrecord.py  kitti_tf_creator.py
datasets/MSCOCO/: coco.pbtxt  coco_to_yolo_labels.py  coco_yolo_structure.py  mscoco_add_depth_to_labels.py  mscoco_tf_creator_depth.py  mscoco_tfrecords.py
datasets/SUNRGBD/: sunrgbd2d.pbtxt  sunrgbd_add_depth_to_labels.py  sunrgbd_depth_tfrecords.py  sunrgbd_tfrecords.py
datasets/visdrone/: visdrone.pbtxt  visdrone_add_depth_to_labels.py  (+3 more)
object_detection/: depth_DCT.py  depth_DCT_util.py
object_detection/yolov11/: .gitignore  README.md  Singularity.def  predict.py  pyproject.toml  train.py
object_detection/yolov11/configs/: coco-subset.yaml  coco.yaml  kitti-depth.yaml  kitti-subset.yaml  kitti.yaml  sunrgbd-depth.yaml  sunrgbd2d-subset.yaml  sunrgbd2d.yaml  visdrone-subset.yaml  visdrone.yaml
object_detection/yolov11/dataset-configs/: coco-subset.yaml  coco.yaml  kitti-depth.yaml  kitti-subset.yaml  kitti.yaml  sunrgbd-depth.yaml  sunrgbd.yaml  sunrgbd2d-subset.yaml  sunrgbd2d.yaml  visdrone-subset.yaml  visdrone.yaml
object_detection/yolov11/depth/: dataset.py  loss.py  model.py  trainer.py  training.py  validator.py
object_detection/yolov11/scripts/: convert-kitti.py  create-cocostyle-annotations-kitti.py  create-cocostyle-annotations-sunrgbd.py  create-subset.py  download-coco.py  download-visdrone.py  prepare-depth-dataset-kitti.py  prepare-depth-dataset-sunrgbd.py
(+20 files in other folders)
